--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Welcome to Resume Boost - a platform to enhance your resumes and interview skills.">
   <title>Welcome to Resume Boost</title>
-  <link rel="stylesheet" href="resume.css">
+  <link rel="stylesheet" href="styles.css">
   <!-- Consider adding a favicon -->
 </head>
 <body>
